--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -7,6 +7,7 @@ layout: default
     local_fists_tool=true
     multiplayer_fists_tool=true
     multiplayer=true
+    affinity_tool=true
     damage_tracker=true
     showCardInfo=true
     lastPage=true
