--- a/_includes/toolbar.html
+++ b/_includes/toolbar.html
@@ -40,6 +40,7 @@ background_color
 
   {% if include.hamburger %}
     {% include hamburger_menu.html %}
+    {% include player_data_tool.html %}
   {% endif %}
 
   <div {% if include.hideTools %}x-show="showTools" x-collapse {% endif %} class="grid grid-cols-1">
